# japanese-lock-box

./: .envrc  .gitignore  pyproject.toml
japanese_lock_box/: config.py  lock.py  lock_box.py
